fix(Layout): retirar o collapse da navbar e colocar display flex.

--- a/Src/BugTracker/Interface.Presentation/Content/Custom/layout-home.css
+++ b/Src/BugTracker/Interface.Presentation/Content/Custom/layout-home.css
@@ -45,7 +45,6 @@
 }
 
 body {
-    padding-top: 80px;
     font-size: 12px;
     color: #34495e;
     background: #f5f5f5;
@@ -279,6 +278,7 @@ header.navbar .navbar-inner {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
+    padding-left: 20px;
 }
 
 header #logo {
@@ -934,4 +934,15 @@ ul.faq {
     text-align: center;
     margin-top: 150px;
     margin-bottom: 150px;
+}
+
+@media (max-width: 600px) {
+    .navbar-inner {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        padding: 12px 0;
+    }
 }
